# test_dual_trajectory

./: CMakeLists.txt  README.md  package.xml
config/: dual_controllers.yaml
src/: main.cpp  path.txt
