<?xml version="1.0"?>
<package format="2">
  <name>test_dual_trajectory</name>
  <version>0.0.0</version>
  <description>The dual arm test_dual_trajectory package</description>

  <maintainer email="jiyeong@gmail.com">jiyeong</maintainer>


  <license>TODO</license>

  <depend>assembly_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_core</depend>
  <depend>actionlib</depend>
  <depend>franka_gripper</depend>
  <depend>actionlib_msgs</depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <export>
    <controller_interface plugin="${prefix}/assembly_dual_controllers_plugin.xml"/>

  </export>
</package>
